<!--
  ~ Copyright 2018,  Jayant Singh, All rights reserved.
  -->

<resources>
    <string name="app_name">IILM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Nav drawer strings -->
    <string name="nav_outpass_request">Request Out Pass</string>
    <string name="nav_outpass_history">Out Pass History</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_sign">Approve</string>
    <string name="nav_console_history">History</string>
    <string name="nav_console_report">Report</string>
    <string name="nav_about">About</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_uid">User ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_uid">Invalid user ID</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_console">ConsoleActivity</string>
    <string name="title_activity_approve_deny">ApproveDenyActivity</string>
    <string name="title_activity_outpass_view">OutpassViewActivity</string>

    <!-- Strings related to reset password -->
    <string name="reset">Reset</string>
    <string name="reset_password">Reset Password</string>

    <string-array name="day_night_spinner">
        <item>Day Out Pass</item>
        <item>Night Out Pass</item>
    </string-array>

    <string name="logout_failed">Failed to logout</string>
    <string name="something_failed">Something went wrong, Please try again.</string>

    <string name="content_description_logo">logo</string>
    <string name="no_account_message">No account yet? Contact college</string>

    <string name="branch">BRANCH</string>
    <string name="year">YEAR</string>
    <string name="scope">SCOPE</string>
    <string name="gender">GENDER</string>
    <string name="email">EMAIL</string>
    <string name="room">ROOM</string>
    <string name="phone_number">PHONE</string>
    <string name="feedback">FEEDBACK</string>
    <string name="change_password">CHANGE PASSWORD</string>

    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Retype New Password</string>

    <string name="allowed">Allowed</string>
    <string name="denied">Denied</string>
    <string name="waiting">Waiting</string>

    <string name="update_message">"UPDATE TO CONTINUE"</string>


    <string name="visit_developer_site">ABOUT DEVELOPER</string>
    <string name="logout">LOGOUT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
