<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018,  Jayant Singh, All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_console_sign"
            android:checked="true"
            android:icon="@drawable/ic_done_all"
            android:title="@string/nav_sign" />
        <item
            android:id="@+id/nav_console_history"
            android:icon="@drawable/ic_history_black"
            android:title="@string/nav_console_history" />
        <item
            android:id="@+id/nav_console_report"
            android:icon="@drawable/ic_history_black"
            android:title="@string/nav_console_report" />
        <item
            android:id="@+id/nav_console_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/nav_settings" />
    </group>

</menu>
