<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018,  Jayant Singh, All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_outpass_history"
            android:checked="true"
            android:icon="@drawable/ic_history_black"
            android:title="@string/nav_outpass_history" />
        <item
            android:id="@+id/nav_outpass"
            android:icon="@drawable/ic_create_black"
            android:title="@string/nav_outpass_request" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/nav_settings" />
    </group>

</menu>
