<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018,  Jayant Singh, All rights reserved.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:mContext="auth.ChangePasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/approve_deny_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@color/other"
                    android:orientation="vertical" />

                <EditText
                    android:id="@+id/et_cp_old"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/old_password"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textSize="16sp"
                    android:background="@drawable/edit_text_background"
                    android:maxLines="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/separator_background" />

                <EditText
                    android:id="@+id/et_cp_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textSize="16sp"
                    android:background="@drawable/edit_text_background"
                    android:maxLines="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/separator_background" />

                <EditText
                    android:id="@+id/et_cp_re_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/retype_new_password"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textSize="16sp"
                    android:background="@drawable/edit_text_background"
                    android:maxLines="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/separator_background" />

                <Button
                    android:id="@+id/bt_cp_change"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:background="@drawable/white_button_background"
                    android:text="@string/change_password" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>

    <LinearLayout
        android:id="@+id/cp_progress_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#32000000"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/cp_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>

</FrameLayout>
